--- a/index.html
+++ b/index.html
@@ -47,11 +47,15 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<a class="icon fa-facebook"><span class="label">Facebook</span>artevibracionalatelieivanio</a><br/>
+							<!--<a class="icon fa-instagram"><span class="label">Instagram</span>##############<a/><br/>-->
+							<a class="icon fa-whatsapp"><span class="label">WhatsApp</span> (54) 9 9172-8109</a><br/>
+							<a class="icon fa-envelope"><span class="label">Email</span>ivanioribolliperuso@hotmail.com</a><br/>
+							<!--<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="artevibracional@outlook.com"><a class="icon fa-envelope"><span class="label">Email</span></a></li>
 							<li><a href="https://api.whatsapp.com/send?phone=5554991728109&text=Ola:%20se%20o%20redirecionamento%20falhar,%20por favor%20adicione%20o%20numero%20acima%20em%20seu%20smartphone" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
-							
+							-->
 						</ul>
 
 				</div>
