--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 				</div>
 
-				<div class="bottom">
+				<!--<div class="bottom">
 
 					<!-- Social Icons -->
 						<ul class="icons">
@@ -58,7 +58,7 @@
 							-->
 						</ul>
 
-				</div>
+				</div>-->
 
 			</div>
 
