--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							</header>
 
 							<p>Um terrário nos apresenta, em micro-escala, o nosso meio ambiente, constituído
-							por solo, água, ar, luz e seres vivos. Além disso, permite-nos observar fenómenos da 
+							por solo, água, ar, luz e seres vivos. Além disso, permite-nos observar fenômenos da 
 							natureza, transmite calma e tranquilidade para o ambiente.</p>
 
 							<div class="row">
@@ -113,7 +113,7 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/terrarios/ter04.jpg" alt="" /></a>
 										<header>
-											<h3>Terrário em vidro de lampadas</h3>
+											<h3>Terrário em vidro de lâmpadas</h3>
 										</header>
 									</article>
 								</div>
@@ -143,7 +143,7 @@
 								<h2>Paisagismo Regenerativo</h2>
 							</header>
 
-							<p> ver o paisagismo com o olhar educado para perceber e enxergar as estratégias da natureza para formar
+							<p> ver o paisagismo sob um olhar educado para perceber e enxergar as estratégias da natureza para formar
 							as mais diversas paisagens.<br/>A natureza nos dá as dicas para um paisagismo com um menor impacto e uma
 							maior interação com as diversas formas de vida, nas diversas paisagens.</p>
 
@@ -166,13 +166,13 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/paisregen/pas03.png" alt="" /></a>
 										<header>
-											<h3>Jardin planetário</h3>
+											<h3>Jardim planetário</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/paisregen/pas04.png" alt="" /></a>
 										<header>
-											<h3>Jardin planetário</h3>
+											<h3>Jardim planetário</h3>
 										</header>
 									</article>
 								</div>
@@ -186,7 +186,7 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/paisregen/pas06.jpg" alt="" /></a>
 										<header>
-											<h3>Jardin planetário</h3>
+											<h3>Jardim planetário</h3>
 										</header>
 									</article>
 								</div>
