--- a/index.html
+++ b/index.html
@@ -512,10 +512,10 @@
 								<h2>Contatos</h2>
 							</header>
 
-							<a class="icon fa-facebook"><span class="label">Facebook</span>artevibracionalatelieivanio</a><br/>
+							<a class="icon fa-facebook"><span class="label">Facebook</span>artevibracionalatelieivanio</a></br>
 							<!--<a class="icon fa-instagram"><span class="label">Instagram</span>##############<a/><br/>-->
-							<a class="icon fa-whatsapp"><span class="label">WhatsApp</span> (54) 9 9172-8109</a><br/>
-							<a class="icon fa-envelope"><span class="label">Email</span>ivanioribolliperuso@hotmail.com</a><br/>
+							<a class="icon fa-whatsapp"><span class="label">WhatsApp</span> (54) 9 9172-8109</a></br>
+							<a class="icon fa-envelope"><span class="label">Email</span>ivanioribolliperuso@hotmail.com</a></br>
 							
 
 					<!--	<form method="post" action="#">
